# Adaptive-Cruise-Control

./: CMakeLists.txt  README.md  package.xml
launch/: final_project.launch  spawn_audibot.launch  two_audibot_road_world.launch
msg/: TrackedObject.msg
rviz/: simulation.rviz
src/: AudibotCruise.cpp  AudibotCruise.h  audibot_cruise_node.cpp
urdf/: audibot_gps_and_camera.urdf.xacro  hokuyo_utm_30.urdf.xacro
