<?xml version="1.0"?>
<package format="2">
  <name>audibot_final_project</name>
  <version>0.0.0</version>
  <description>
  Audibot Cruise Control Project
  </description>
  <maintainer email="potluri@oakland.edu">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>ugv_course_libs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>


  <export>
  </export>
</package>
